// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyzeWordV1 gold words v1 matches snapshot for 'damage' (v1.0.0) 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "damage",
      ],
      "form": "damage",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "A",
        "E",
      ],
    },
  ],
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
      "A",
      "E",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "A",
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 2,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "sevenVoices": {
    "stressTest": {
      "families": [
        {
          "family": "LIFE",
          "patterns": [
            "L1",
          ],
          "strongest": "medium",
        },
        {
          "family": "SYSTEMS",
          "patterns": [
            "S1",
          ],
          "strongest": "strong",
        },
      ],
      "language": "sq",
      "matches": [
        {
          "family": "LIFE",
          "patternId": "L1",
          "reason": "Pattern template [A] is a prefix or suffix of the vowel path.",
          "strength": "medium",
        },
        {
          "family": "SYSTEMS",
          "patternId": "S1",
          "reason": "Vowel path exactly matches template [A → A → E].",
          "strength": "strong",
        },
      ],
      "tensions": [],
      "vowelPath": "A → A → E",
      "vowels": [
        "A",
        "A",
        "E",
      ],
      "word": "damage",
    },
  },
  "word": "damage",
}
`;

exports[`analyzeWordV1 gold words v1 matches snapshot for 'study' (v1.0.0) 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "study",
      ],
      "form": "study",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
        "Y",
      ],
    },
  ],
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "U",
      "Y",
    ],
    "path": [
      "U",
      "Y",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 1,
      "Y": 1,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "sevenVoices": {
    "stressTest": {
      "families": [],
      "language": "sq",
      "matches": [],
      "tensions": [
        "No strong pattern match found for this vowel path.",
      ],
      "vowelPath": "U → Y",
      "vowels": [
        "U",
        "Y",
      ],
      "word": "study",
    },
  },
  "word": "study",
}
`;
